--- a/build.gradle
+++ b/build.gradle
@@ -36,8 +36,15 @@ javafx {
 
 dependencies {
 
+  implementation("io.freefair.gradle:lombok-plugin:8.4")
+  compileOnly ('org.projectlombok:lombok:1.18.34')
+  //annotationProcessor ('org.projectlombok:lombok:1.18.34')
+  implementation("com.google.code.gson:gson:2.11.0")
+  testImplementation(platform("org.junit:junit-bom:5.10.0"))
+  testImplementation("org.junit.jupiter:junit-jupiter")
   testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
   testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+  implementation 'mysql:mysql-connector-java:8.0.33'
 }
 
 test {
