--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,9 @@ dependencies {
   implementation("org.springframework.boot:spring-boot:3.4.1")
   implementation("org.springframework.boot:spring-boot-autoconfigure:3.4.1")
   implementation("org.yaml:snakeyaml:2.3")
+
+  implementation("org.slf4j:slf4j-api:2.0.16")
+  testImplementation("ch.qos.logback:logback-classic:1.5.15")
 }
 
 test {
